# ScandalClassify

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: defaults.yaml
scripts/: aggregate_votes.py  build_groups.py  make_trends.py  prepare_data.py  run_infer.py
src/scandalclassify/: config.py
src/scandalclassify/grouping/: greedy.py  sliding_window.py
src/scandalclassify/llm/: aggregate.py  infer.py  schema.py
src/scandalclassify/reporting/: trends.py
