[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scandalclassify"
version = "0.1.0"
description = "Scandal classification and trend analysis on Korean news using OpenAI API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "jaywoong" }
]
keywords = ["korean-news", "scandal", "classification", "trends", "analysis"]
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "openai>=1.51",
  "tiktoken>=0.7",
  "pydantic>=2.8",
  "python-dateutil>=2.9",
  "scikit-learn>=1.5",
  "tenacity>=8.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "mypy>=1.11",
  "ipykernel>=6.29"
]

[tool.uv]
package = true


